handle view when keyboard is toggled

--- a/ReminderApp/SupportingFiles/Base.lproj/Main.storyboard
+++ b/ReminderApp/SupportingFiles/Base.lproj/Main.storyboard
@@ -16,56 +16,83 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="xpr-MK-fmC">
-                                <rect key="frame" x="16" y="104" width="382" height="434"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CN8-g1-7WC">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eV4-tI-fNE" customClass="FSCalendar">
-                                        <rect key="frame" x="0.0" y="0.0" width="382" height="300"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yfc-gv-SAm">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="466"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="xpr-MK-fmC">
+                                                <rect key="frame" x="16" y="16" width="382" height="434"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eV4-tI-fNE" customClass="FSCalendar">
+                                                        <rect key="frame" x="0.0" y="0.0" width="382" height="300"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="300" id="1qJ-qF-l9c"/>
+                                                        </constraints>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="allowsSelection" value="YES"/>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="firstWeekday">
+                                                                <integer key="value" value="7"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="color" keyPath="selectionColor">
+                                                                <color key="value" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="color" keyPath="todayColor">
+                                                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </view>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="H5P-Bh-cjj">
+                                                        <rect key="frame" x="0.0" y="316" width="382" height="118"/>
+                                                        <subviews>
+                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JS4-H1-sLC">
+                                                                <rect key="frame" x="0.0" y="0.0" width="382" height="34"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                <textInputTraits key="textInputTraits"/>
+                                                            </textField>
+                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yyn-tg-5lT">
+                                                                <rect key="frame" x="0.0" y="42" width="382" height="34"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                <textInputTraits key="textInputTraits"/>
+                                                            </textField>
+                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date &amp; Time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JMw-Wx-47T">
+                                                                <rect key="frame" x="0.0" y="84" width="382" height="34"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                <textInputTraits key="textInputTraits"/>
+                                                            </textField>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="300" id="1qJ-qF-l9c"/>
+                                            <constraint firstItem="xpr-MK-fmC" firstAttribute="top" secondItem="Yfc-gv-SAm" secondAttribute="top" constant="16" id="465-Pd-DLP"/>
+                                            <constraint firstItem="xpr-MK-fmC" firstAttribute="leading" secondItem="Yfc-gv-SAm" secondAttribute="leading" constant="16" id="4El-9f-gZh"/>
+                                            <constraint firstAttribute="bottom" secondItem="xpr-MK-fmC" secondAttribute="bottom" constant="16" id="iUz-DH-lkh"/>
+                                            <constraint firstAttribute="trailing" secondItem="xpr-MK-fmC" secondAttribute="trailing" constant="16" id="zet-vr-PvS"/>
                                         </constraints>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="allowsSelection" value="YES"/>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="firstWeekday">
-                                                <integer key="value" value="7"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="selectionColor">
-                                                <color key="value" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="todayColor">
-                                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="H5P-Bh-cjj">
-                                        <rect key="frame" x="0.0" y="316" width="382" height="118"/>
-                                        <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JS4-H1-sLC">
-                                                <rect key="frame" x="0.0" y="0.0" width="382" height="34"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yyn-tg-5lT">
-                                                <rect key="frame" x="0.0" y="42" width="382" height="34"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date &amp; Time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JMw-Wx-47T">
-                                                <rect key="frame" x="0.0" y="84" width="382" height="34"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                        </subviews>
-                                    </stackView>
                                 </subviews>
-                            </stackView>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Yfc-gv-SAm" secondAttribute="bottom" id="8Uz-s4-r9R"/>
+                                    <constraint firstItem="Yfc-gv-SAm" firstAttribute="leading" secondItem="CN8-g1-7WC" secondAttribute="leading" id="YAa-Rq-L9h"/>
+                                    <constraint firstItem="Yfc-gv-SAm" firstAttribute="top" secondItem="CN8-g1-7WC" secondAttribute="top" id="YLD-mB-xxA"/>
+                                    <constraint firstAttribute="trailing" secondItem="Yfc-gv-SAm" secondAttribute="trailing" id="wyy-vu-CRW"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="XWV-U9-oWh"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="phS-ZY-dzI"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="xpr-MK-fmC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="69U-K2-xyj"/>
-                            <constraint firstItem="xpr-MK-fmC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="i4s-2F-HGo"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xpr-MK-fmC" secondAttribute="trailing" constant="16" id="ra5-ZY-hsT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CN8-g1-7WC" secondAttribute="trailing" id="5OP-m0-xsf"/>
+                            <constraint firstItem="CN8-g1-7WC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5WY-0L-clf"/>
+                            <constraint firstItem="Yfc-gv-SAm" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="6QV-p5-hm2"/>
+                            <constraint firstItem="CN8-g1-7WC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="btp-Fa-Nwh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="CN8-g1-7WC" secondAttribute="bottom" id="qQb-cR-l5l"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
